tests/fixtures/invalid/pow_bytes_str_bytes.py
# Cannot call pow() with Bytes, Str, Bytes
x = pow(b"hello", "hello", b"hello")
